# mtg-precon-stats-dashboard

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  init_db.py  populate_db.py  precon.db  pyproject.toml  requirements.txt  scryfall_api.py  set_list.txt  tag_list.txt
decklists/: counter_blitz.txt  counter_intelligence.txt  desert_bloom.txt  grand_lacerny.txt  limit_break.txt  lorehold_legacies.txt  most_wanted.txt  prismari_performance.txt  quantum_quadrix.txt  quick_draw.txt  revival_trance.txt  scions_spellcraft.txt  silverquill_statement.txt  whiterbloom_witchcraft.txt  world_shapper.txt
src/dashboard/: app.py  core.py
src/dashboard/dataframes/: all_cards_data.py  card_tags_per_deck_df.py  common_dataframes.py  deck_cmc_group_df.py  deck_stats_df.py
src/dashboard/tabs/: decklist_breakdown_tab.py  tag_tab.py
src/dashboard/visualizations/: summary_metrics.py
src/precon_db/: init_db.py  populate_db.py
