[project]
name = "precon-stats"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexandreOkita",email = "xande.okita@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "streamlit (>=1.51.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "precon_stats", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
